# luftqualitaet-api

./: CNAME  README.md  generator_config.yaml  index.html  openapi.yaml
python-client/: README.md  pyproject.toml  tox.ini
python-client/.openapi-generator/: FILES
python-client/docs/: Airquality.md  AirqualityApi.md  AirqualityDateStartCET.md  AirqualityDateStartCET3AndFollowing.md  AirqualityStationId.md  Airqualitylimits.md  AirqualitylimitsStationId.md  Annualbalance.md  AnnualtabulationApi.md  Component.md  ExceedancesApi.md  InlineResponse200.md  InlineResponse2001.md  InlineResponse2002.md  InlineResponse2003.md  InlineResponse2004.md  InlineResponse2004Data.md  InlineResponse2005.md  InlineResponse2006.md  InlineResponse2006Components.md  InlineResponse2006Limits1.md  InlineResponse2006Limits2.md  InlineResponse2006Networks.md  InlineResponse2006Scopes.md  InlineResponse2006Stations.md  InlineResponse2006Xref.md  Limit.md  Measure.md  Measurelimit.md  MeasurementsApi.md  MetadataApi.md  Network.md  Scope.md  Station.md  Stationsetting.md  Stationtype.md  Threshold.md  Transgression.md  Transgressiontype.md
python-client/sphinx-docs/: conf.py  index.rst
python-client/test/: test_airquality.py  test_airquality_api.py  test_airquality_date_start_cet.py  test_airquality_date_start_cet3_and_following.py  test_airquality_station_id.py  test_airqualitylimits.py  test_airqualitylimits_station_id.py  test_annualbalance.py  test_annualtabulation_api.py  test_component.py  test_exceedances_api.py  test_inline_response200.py  test_inline_response2001.py  test_limit.py  (+25 more)
(+56 files in other folders)
